--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>&#9818;: Victor-M-&#60;/&#62;</title>
+  <title>: victor-m-&#60;/&#62;</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="HTML5 website template">
-  <meta name="keywords" content="global, template, html, sass, jquery">
+  <meta name="description" content="South African Freelance Web Developer">
+  <meta name="keywords" content="Web Design & Developement, Freelancer, React, PHP, Python, MySql">
   <meta name="author" content="Banele Victor Mayisela">
+  <link rel="shortcut icon" href="assets/img/icon.png" type="image/x-icon">
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
@@ -15,10 +16,10 @@
 <!-- notification for small viewports and landscape oriented smartphones -->
 <div class="device-notification">
   <a class="device-notification--logo" href="#0">
-    <img src="assets/img/logo.png" alt="Global">
-    <p>Global</p>
+    <img src="assets/img/icon_resized.png" alt="Victor-M-Code">
+    <p>Banele Victor Mayisela</p>
   </a>
-  <p class="device-notification--message">Global has so much to offer that we must request you orient your device to portrait or find a larger screen. You won't be disappointed.</p>
+  <p class="device-notification--message">South African Freelance Web Developer.</p>
 </div>
 
 <div class="perspective effect-rotate-left">
@@ -27,7 +28,7 @@
       <div class="l-wrapper">
         <header class="header">
           <a class="header--logo" href="#0">
-            <p><span>&#9818;</span>: Victor-M-&#60;/&#62;</p>
+            <p><span>&#9818;</span>: victor-m-&#60;/&#62;</p>
           </a>
           <div class="header--nav-toggle">
             <span></span>
@@ -64,11 +65,11 @@
                 </a>
                 <a href="#0">
                   <h3>Native Mobile App Developement</h3>
-                  <p>Building custom, tailor made, and purpose drivern Mobile Applications.</p>
+                  <p>Building tailor made, and purpose drivern Mobile Applications.</p>
                 </a>
                 <a href="#0">
                   <h3>Systems Software &amp; Analysis</h3>
-                  <p>Doing research, study legacy systems, then maintain and improve.</p>
+                  <p>Research and study legacy systems to maintain and improve.</p>
                 </a>
               </div>
             </div>
@@ -144,7 +145,7 @@
                   <h3>History</h3>
                 </a>
                 <a href="#0">
-                  <h3>History</h3>
+                  <h3>Daily Thetha</h3>
                 </a>
               </div>
             </div>
@@ -154,12 +155,12 @@
               <div class="contact--lockup">
                 <div class="modal">
                   <div class="modal--information">
-                    <p>Pawia 5, 31-154 Kraków, Poland</p>
-                    <a href="mailto:ouremail@gmail.com">ouremail@gmail.com</a>
-                    <a href="tel:+148126287560">+48 12 628 75 60</a>
+                    <p>1050 Goba Mayflower <br> Mpuluzi, Mbombela <br> South Africa</p>
+                    <a href="mailto:ouremail@gmail.com">banelevictorm@gmail.com</a>
+                    <a href="tel:+148126287560">+27 63 386 9335</a>
                   </div>
                   <ul class="modal--options">
-                    <li><a href="#0">Bēhance</a></li>
+                    <li><a href="#0">Facebook</a></li>
                     <li><a href="#0">dribbble</a></li>
                     <li><a href="#0">dribbble</a></li>
                     <li><a href="#0">dribbble</a></li>
