--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <div id="viewport" class="l-viewport">
       <div class="l-wrapper">
         <header class="header">
-          <a class="header--logo" href="#0">
-            <p><span>&#9818;</span>: victor-m-&#60;/&#62;</p>
+          <a class="header--logo home" href="#0">
+            <p><span>&#9818;</span>: VictorM</p>
           </a>
           <div class="header--nav-toggle">
             <span></span>
@@ -49,7 +49,7 @@
           <li class="l-section section section--is-active">
             <div class="intro">
               <div class="intro--banner">
-                <h1>Banele<br>Victor<br>Mayisela</h1>
+                <h1>Web <br> App<br>Developer</h1>
                 <button class="cta">Freelance Developer
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                   <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
@@ -58,7 +58,7 @@
                   </svg>
                   <span class="btn-background"></span>
                 </button>
-                <img src="assets/img/icon_resized.png" alt="Welcome">
+                <img src="assets/img/logo.png" alt="Welcome">
               </div>
               <div class="intro--options">
                 <a href="#0">
@@ -70,7 +70,7 @@
                   <p>Building tailor made, and purpose drivern Mobile Applications.</p>
                 </a>
                 <a href="#0">
-                  <h3>Systems Software &amp; Analysis</h3>
+                  <h3>Systems Software Analysis</h3>
                   <p>Research and study legacy systems to maintain and improve.</p>
                 </a>
               </div>
@@ -96,6 +96,15 @@
                         <img src="assets/img/work-2.png" alt="Metiew and Smith">
                       </div>
                       <p class="slider--item-title">GitHub</p>
+                      <p class="slider--item-description">Test site image.</p>
+                    </a>
+                  </li>
+                  <li class="slider--item slider--item-right">
+                    <a href="#0">
+                      <div class="slider--item-image">
+                        <img src="assets/img/work-3.png" alt="Alex Nowak">
+                      </div>
+                      <p class="slider--item-title">The-Image-Editor</p>
                       <p class="slider--item-description">Test site image.</p>
                     </a>
                   </li>
@@ -170,16 +179,16 @@
               <div class="contact--lockup">
                 <div class="modal">
                   <div class="modal--information">
-                    <p>E1050 Goba Mayflower <br> Mpuluzi, Mbombela <br> South Africa</p>
-                    <a href="mailto:ouremail@gmail.com">banelevictorm@gmail.com</a>
-                    <a href="tel:+148126287560">+27 63 386 9335</a>
+                    <p>Stand 6771 Block 5 Moloto <br> Kwa-Mhlanga, Mpumalanga <br> South Africa</p>
+                    <a href="mailto:banelevictorm@gmail.com">banelevictorm@gmail.com</a>
+                    <a href="tel:+27710108876">+27 71 010 8876</a>
                   </div>
                   <ul class="modal--options">
-                    <li><a href="#0"> Facebook <i class="fab fa-2x fa-facebook-square"></i> </a></li>
-                    <li><a href="#0"> Twitter <i class="fab fa-2x fa-twitter-square"></i> </a></li>
-                    <li><a href="#0"> Instagram <i class="fab fa-2x fa-instagram-square"></i> </a></li>
-                    <li><a href="#0"> LinkedIn <i class="fab fa-2x fa-linkedin"></i> </a></li>
-                    <li><a href="mailto:banelevictro@gmail.com"> 
+                    <li><a href="https://web.facebook.com/mayiselabanele/?_rdc=1&_rdr#" target="_blank" rel="noopener noreferrer"> Facebook <i class="fab fa-2x fa-facebook-square"></i> </a></li>
+                    <li><a href="https://github.com/victor-m-code" target="_blank" rel="noopener noreferrer"> GitHub <i class="fab fa-2x fa-github-square"></i> </a></li>
+                    <li><a href="https://www.instagram.com/mayiselabanele/" target="_blank" rel="noopener noreferrer"> Instagram <i class="fab fa-2x fa-instagram-square"></i> </a></li>
+                    <li><a href="https://za.linkedin.com/in/banele-victor-mayisela-523a1257" target="_blank" rel="noopener noreferrer"> LinkedIn <i class="fab fa-2x fa-linkedin"></i> </a></li>
+                    <li><a href="mailto:banelevictro@gmail.com" target="_blank" rel="noopener noreferrer"> 
                       Email <i class="fa fa-2x fa-envelope"></i> 
                     </a></li>
                   </ul>
@@ -189,7 +198,7 @@
           </li>
           <li class="l-section section">
             <div class="hire">
-              <h2>You want us to do</h2>
+              <h2>Select desired services</h2>
               <!-- checkout formspree.io for easy form setup -->
               <form class="work-request">
                 <div class="work-request--options">
@@ -281,7 +290,7 @@
     <li>Works</li>
     <li>About</li>
     <li>Contact</li>
-    <li>Hire us</li>
+    <li>Hire Me</li>
   </ul>
 </div>
 
